<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetracer</name>
  <version>0.0.0</version>
  <description>ros2 package for Jetracer</description>
  <maintainer email="shokohishahab@gmail.com">jetsonorin1</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>                         <!-- new -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>           <!-- new -->
  <depend>boost_system</depend>
  <depend>joy</depend>

  <!-- If you need Boost.Asio from system -->
  <depend>boost_asio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
