<?xml version="1.0"?>
<package format="3">
  <name>orbslam2_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for sharing ORB-SLAM2 map points</description>
  <license>MIT</license>
  <maintainer email="you@example.com">Your Name</maintainer>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime for generated typesupport -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Required for packages that install interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export/>
</package>
